--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "*",
+    "bcrypt": "^5.0.0",
     "body-parser": "*",
     "cors": "*",
     "express": "*",
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
     "knex": "*",
+    "morgan": "^1.10.0",
     "pg": "*"
   },
   "devDependencies": {
