--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,15 @@ services:
   node_backend:
     container_name: "backend_server"
     build: ./
-    command: npm start
+    command: npm run dev
     working_dir: /usr/src/job-track-api
     environment:
       POSTGRES_URI : postgres://user:password@postgres:5432/job-track-db-docker
     links:
       - postgres
-    #for hot reload nodemon->#volumes:
-    #  - ./:/usr/src/job-track-api
+    #for hot reload nodemon
+    volumes:
+      - ./:/usr/src/job-track-api
     ports:
       - "3005:3005"
 
